--- a/DeveMazeGeneratorCore.MonoGame.DesktopGL/DeveMazeGeneratorCore.MonoGame.DesktopGL.csproj
+++ b/DeveMazeGeneratorCore.MonoGame.DesktopGL/DeveMazeGeneratorCore.MonoGame.DesktopGL.csproj
@@ -4,6 +4,7 @@
 		<TargetFramework>net6.0</TargetFramework>
 		<PublishReadyToRun>false</PublishReadyToRun>
 		<TieredCompilation>false</TieredCompilation>
+		<MonoGamePlatform>DesktopGL</MonoGamePlatform>
 	</PropertyGroup>
 	<PropertyGroup>
 		<ApplicationManifest>app.manifest</ApplicationManifest>
@@ -19,13 +20,13 @@
 		</MonoGameContentReference>
 	</ItemGroup>
 	<ItemGroup>
-	  <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
-	  <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
+	  <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />	  
 	</ItemGroup>
 	<ItemGroup>
 		<TrimmerRootAssembly Include="Microsoft.Xna.Framework.Content.ContentTypeReader" Visible="false" />
 	</ItemGroup>
 	<ItemGroup>
+	  <ProjectReference Include="..\..\kniEngine\kni\MonoGame.Framework\MonoGame.Framework.DesktopGL.csproj" />
 	  <ProjectReference Include="..\DeveMazeGeneratorCore.MonoGame.Core\DeveMazeGeneratorCore.MonoGame.Core.csproj" />
 	</ItemGroup>
 	<ItemGroup>
